style.css
.hero {
    position: relative;
    width: 100%;
    height: 100vh;
    overflow: hidden;
}

.hero video {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.content {
    position: absolute;
    top: 50%;
    left: 50px;
    right: 50px;
    transform: translateY(-50%);
    color: white;
    z-index: 2;
    max-width: 600px;
}

.content h1 {
    margin: 0;
    font-size: 4rem;
}

.content span {
    color: rgb(255, 128, 0);
}

.content p {
    margin-top: 15px;
    font-size: 1.1rem;
    color: rgb(226, 226, 226);
}

.black-banner {
    position: absolute;
    width: 100%;
    height: 180px;
    top: 100%;
    transform: translateY(-110%);
    z-index: 1;
}

.details-css {
    color: rgb(234, 234, 234);
}

.bg-imge {
    background: rgba(0, 0, 0, 0.575) url("bg-images/8d1ea829d216ef05d3ad69313622e409f40a9ffa.jpg");
    background-repeat: no-repeat;
    background-size: cover;
    height: 100cap;
    background-blend-mode: darken;
}

.au-css {
    color: white;
    text-align: center;
    padding: 10px;
    text-decoration: underline;
}

.au-css span {
    color: rgb(255, 179, 0);
}

.os-one {
    color: white;
    text-align: center;
    padding: 10px;
    text-decoration: underline;
}

.os-one span {
    color: rgb(255, 179, 0);
}

.os-para {
    text-align: center;
    font-size: 15px;
    color: rgba(255, 255, 255, 0.859);
}

.os-text {
    color: rgba(255, 255, 255, 0.799);
    font-size: 20px;
    text-align: center;
}

.footer-logo {
    color: rgb(237, 237, 237);
    font-size: 55px;
}

.footer-ql-text {
    color: rgb(237, 237, 237);
    font-size: 20px;
}

.ul-group {
    list-style: none;
}

.ul-group li a {
    text-decoration: none;
    color: rgb(237, 237, 237);
}

.ul-group li {
    margin-top: 15px;
}

.ul-group-2 {
    list-style: none;
}

.ul-group-2 li {
    color: rgb(237, 237, 237);
    margin-bottom: 20px;
}

